admission-controller/opa-policies/13-deny-default-serviceaccount-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyDefaultSA
metadata:
  name: deny-default-serviceaccount
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "DaemonSet"]
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
